--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -118,23 +118,55 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:weightSum="10">
+                        android:layout_marginStart="16dp"
+                        android:background="@drawable/background_dashboard_right"
+                        android:orientation="vertical">
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:background="@drawable/ic_icon_today" />
+
+                            <Space
+                                android:layout_width="16dp"
+                                android:layout_height="match_parent" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:fontFamily="@font/lato_black"
+                                android:text="Today's Stats"
+                                android:textColor="#FFFFFF"
+                                android:textSize="24sp" />
+
+                        </LinearLayout>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
 
                         <com.google.android.material.card.MaterialCardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="8dp"
-                            android:layout_weight="4"
                             app:cardCornerRadius="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:background="@drawable/background_toolbar"
                                 android:orientation="vertical"
                                 android:padding="16dp">
 
@@ -144,7 +176,7 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/lato_black"
                                     android:text="0"
-                                    android:textColor="#FFFFFF"
+                                    android:textColor="@color/textColor"
                                     android:textSize="24sp" />
 
                                 <TextView
@@ -152,26 +184,26 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/lato_bold"
                                     android:text="Bookings"
-                                    android:textColor="#FFFFFF"
+                                    android:textColor="@color/textColor"
                                     android:textSize="14sp" />
 
                             </LinearLayout>
                         </com.google.android.material.card.MaterialCardView>
 
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
+
                         <com.google.android.material.card.MaterialCardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="8dp"
-                            android:layout_weight="6"
                             app:cardCornerRadius="8dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:background="@drawable/background_toolbar"
                                 android:orientation="vertical"
                                 android:padding="16dp">
 
@@ -185,7 +217,7 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/lato_black"
                                         android:text="@string/peso_sign"
-                                        android:textColor="#FFFFFF"
+                                        android:textColor="@color/textColor"
                                         android:textSize="24sp" />
 
                                     <TextView
@@ -194,7 +226,7 @@
                                         android:layout_height="wrap_content"
                                         android:fontFamily="@font/lato_black"
                                         android:text="0.00"
-                                        android:textColor="#FFFFFF"
+                                        android:textColor="@color/textColor"
                                         android:textSize="24sp" />
                                 </LinearLayout>
 
@@ -203,37 +235,61 @@
                                     android:layout_height="wrap_content"
                                     android:fontFamily="@font/lato_bold"
                                     android:text="Earnings"
-                                    android:textColor="#FFFFFF"
+                                    android:textColor="@color/textColor"
                                     android:textSize="14sp" />
 
                             </LinearLayout>
 
                         </com.google.android.material.card.MaterialCardView>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
+
                     </LinearLayout>
                 </LinearLayout>
 
                 <Space
                     android:layout_width="match_parent"
-                    android:layout_height="8dp" />
+                    android:layout_height="16dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/background_dashboard"
+                    android:layout_marginEnd="16dp"
+                    android:background="@drawable/background_dashboard_left"
                     android:orientation="vertical">
 
                     <Space
                         android:layout_width="match_parent"
                         android:layout_height="16dp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
-                        android:fontFamily="@font/lato_black"
-                        android:text="All-Time Data"
-                        android:textColor="#FFFFFF"
-                        android:textSize="24sp" />
+                        android:layout_marginEnd="16dp"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/ic_icon_stats" />
+
+                        <Space
+                            android:layout_width="16dp"
+                            android:layout_height="match_parent" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/lato_black"
+                            android:text="All-Time Data"
+                            android:textColor="#FFFFFF"
+                            android:textSize="24sp" />
+
+                    </LinearLayout>
 
                     <Space
                         android:layout_width="match_parent"
@@ -242,17 +298,13 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:weightSum="10">
+                        android:orientation="vertical">
 
                         <com.google.android.material.card.MaterialCardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="8dp"
-                            android:layout_weight="4"
                             app:cardCornerRadius="8dp">
 
                             <LinearLayout
@@ -281,14 +333,15 @@
                             </LinearLayout>
                         </com.google.android.material.card.MaterialCardView>
 
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
+
                         <com.google.android.material.card.MaterialCardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
-                            android:layout_marginTop="8dp"
                             android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="8dp"
-                            android:layout_weight="6"
                             app:cardCornerRadius="8dp">
 
                             <LinearLayout
@@ -330,6 +383,10 @@
 
                             </LinearLayout>
                         </com.google.android.material.card.MaterialCardView>
+
+                        <Space
+                            android:layout_width="match_parent"
+                            android:layout_height="16dp" />
 
                     </LinearLayout>
 
@@ -420,6 +477,11 @@
                     </com.google.android.material.card.MaterialCardView>-->
 
                 </LinearLayout>
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="16dp" />
+
             </LinearLayout>
         </ScrollView>
 
