--- a/app/src/main/res/drawable/background_qr.xml
+++ b/app/src/main/res/drawable/background_qr.xml
@@ -2,9 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#FFFFFF"
-        android:startColor="#FFFFFF"/>
+        android:endColor="@color/colorPrimary"
+        android:startColor="@color/colorPrimaryDark" />
 
-    <corners android:radius="8dp" />
+    <corners
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
 
 </shape>
