--- a/app/src/main/res/layout/dialog_booking_confirm_payment.xml
+++ b/app/src/main/res/layout/dialog_booking_confirm_payment.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:drawableTop="@drawable/ic_icon_start"
+                    android:drawableTop="@drawable/ic_icon_scan_qr"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/lato"
                     android:text="Scan Mode"
