--- a/app/src/main/res/layout/dialog_confirm_booking.xml
+++ b/app/src/main/res/layout/dialog_confirm_booking.xml
@@ -8,7 +8,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,10 +21,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_toolbar"
                 android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:paddingEnd="16dp"
-                android:paddingBottom="8dp">
+                android:padding="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -48,13 +46,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp">
+                android:padding="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -80,6 +76,10 @@
 
                     </com.google.android.material.textfield.TextInputLayout>
 
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="6dp" />
+
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/inputVanPlate"
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -102,41 +102,23 @@
                             android:textCursorDrawable="@null" />
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/inputPrice"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:hint="Price"
-                        app:hintEnabled="true"
-                        app:startIconDrawable="@drawable/ic_input_price"
-                        app:startIconTint="@color/colorPrimary">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:fontFamily="@font/lato"
-                            android:inputType="numberDecimal"
-                            android:maxLines="1"
-                            android:textColor="@color/textColor"
-                            android:textCursorDrawable="@null" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1F000000" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
+                android:orientation="horizontal"
                 android:paddingStart="16dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="16sp"
-                android:orientation="horizontal"
                 android:paddingBottom="8dp">
 
                 <com.google.android.material.button.MaterialButton
@@ -145,23 +127,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_black"
-                    android:text="CANCEL"
-                    android:textColor="@color/colorPrimary"
-                    app:backgroundTint="#FFFFFF" />
+                    android:text="CANCEL BOOKING"
+                    android:textColor="@color/colorPrimary" />
 
                 <Space
                     android:layout_width="6dp"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnConfirmBooking"
-                    style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_black"
                     android:text="CONFIRM"
-                    android:textColor="@color/white"
-                    app:backgroundTint="@color/colorPrimary" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
