--- a/app/src/main/res/layout/dialog_forgot_password.xml
+++ b/app/src/main/res/layout/dialog_forgot_password.xml
@@ -8,7 +8,8 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_margin="16dp"
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -18,55 +19,39 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingStart="16dp"
-                android:paddingTop="16dp"
-                android:paddingEnd="16dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:background="@drawable/background_toolbar"
+                    android:orientation="vertical"
+                    android:padding="16dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_black"
-                        android:text="Reset Password"
+                        android:text="Forgot Password"
                         android:textAppearance="?attr/textAppearanceHeadline6"
-                        android:textColor="@color/textColor" />
-
-                </LinearLayout>
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#1F000000" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="8dp"/>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                        android:textColor="#FFFFFF" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
                         android:fontFamily="@font/lato"
-                        android:textColor="@color/textColor"
-                        android:text="Enter your account email here to reset your password."/>
+                        android:text="Enter your account email here to reset your password."
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp" />
 
-                    <Space
-                        android:layout_width="wrap_content"
-                        android:layout_height="8dp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/inputEmail"
@@ -96,19 +81,26 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#1F000000" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
-                android:layout_margin="16dp">
+                android:orientation="horizontal"
+                android:paddingStart="16dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="16sp"
+                android:paddingBottom="8dp">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnConfirm"
-                    style="?attr/materialButtonOutlinedStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato_black"
                     android:text="CONFIRM"
-                    android:textColor="@color/white"
-                    app:backgroundTint="@color/colorPrimary" />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
