--- a/app/src/main/res/layout/nav_header_transport_main.xml
+++ b/app/src/main/res/layout/nav_header_transport_main.xml
@@ -5,14 +5,13 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_toolbar"
     android:orientation="vertical"
-    android:paddingLeft="16dp"
     android:paddingTop="50dp"
-    android:paddingRight="16dp"
     android:paddingBottom="16dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/companyPhoto"
         android:layout_width="75dp"
+        android:layout_marginStart="16dp"
         android:layout_height="75dp"
         android:src="@drawable/placeholder_header_user_dp" />
 
@@ -24,6 +23,8 @@
         android:id="@+id/companyName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:fontFamily="@font/lato_bold"
         android:maxLines="1"
         android:ellipsize="end"
@@ -36,6 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
         android:maxLines="1"
         android:ellipsize="end"
         android:text="address"
@@ -49,7 +52,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/background_qr"
+        android:background="@drawable/background_drawer_header_card"
+        android:layout_marginEnd="16dp"
         android:orientation="horizontal"
         android:padding="8dp">
 
@@ -57,6 +61,7 @@
             android:id="@+id/headerUserPhoto"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginStart="16dp"
             android:layout_gravity="center"
             android:layout_marginEnd="4dp"
             android:src="@drawable/placeholder_header_user_dp" />
