--- a/app/src/main/res/layout/transport_partners_item_layout.xml
+++ b/app/src/main/res/layout/transport_partners_item_layout.xml
@@ -11,6 +11,7 @@
         android:layout_margin="16dp"
         android:clickable="true"
         android:focusable="true"
+        app:cardCornerRadius="16dp"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardElevation="8dp">
 
