--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#0795ff</color>
     <color name="colorAccent">#474444</color>
 
+    <color name="colorQRBG">#00FFFFFF</color>
+
     <color name="colorBadgeBackground">#0795ff</color>
 
     <color name="textColor">#121212</color>
