--- a/app/src/main/res/layout/booking_user_history_item_layout.xml
+++ b/app/src/main/res/layout/booking_user_history_item_layout.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bookingCard"
@@ -11,10 +11,10 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="6dp"
-        app:cardCornerRadius="16dp"
         android:clickable="true"
         android:focusable="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardCornerRadius="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -294,6 +294,7 @@
                             android:text="Plate No.:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
+
                         <Space
                             android:layout_width="match_parent"
                             android:layout_height="6dp" />
@@ -304,8 +305,6 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:lines="3"
-                            android:maxLines="3"
                             android:text="Remarks:"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -465,11 +464,9 @@
                             android:id="@+id/bookingRemarks"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato"
-                            android:lines="3"
                             android:ellipsize="end"
+                            android:fontFamily="@font/lato"
                             android:text=""
-                            android:maxLines="3"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
 
